<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/topBar2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/toolbar_content_description"
        android:paddingBottom="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/resNameDialog"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:padding="2dp"
        android:text="@string/signup_restaurant_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/resDesDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resDesBold"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:text="@string/signup_restaurant_description"
        android:textAlignment="textStart"
        android:textColor="#3587c7"
        android:textSize="16sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/resAddressDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resDesDialog"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:layout_toEndOf="@+id/resAddBold"
        android:text="@string/signup_restaurant_address"
        android:textAlignment="textStart"
        android:textColor="#3587c7"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/resEmailDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resAddressDialog"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/resEmailBold"
        android:text="@string/signup_email"
        android:textAlignment="textStart"
        android:textColor="#3587c7"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/favStar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_toEndOf="@+id/resNameDialog"
        android:contentDescription="@string/maps_button_content_description"
        app:srcCompat="@drawable/ic_star_border" />

    <TextView
        android:id="@+id/resDesBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resNameDialog"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="35dp"
        android:text="@string/dialog_res_description"
        android:textColor="#3587c7"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/resAddBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resDesDialog"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_res_address"
        android:textColor="#3587c7"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/resEmailBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resAddressDialog"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_res_mail"
        android:textColor="#3587c7"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>